# sqloxx

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  Doxyfile  INSTALL  LICENSE  NOTICE  README  README.rst  copyright_config  database_connection.cpp  database_connection.hpp  database_connection_fwd.hpp  database_transaction.cpp  database_transaction.hpp  general_typedefs.hpp  handle.hpp  handle_fwd.hpp  identity_map.hpp  identity_map_fwd.hpp  next_auto_key.hpp  overview.dox  persistence_traits.hpp  persistent_object.hpp  reader.hpp  runtests.bat  sql_statement.cpp  sql_statement.hpp  sql_statement_fwd.hpp  sqloxx_exceptions.hpp  table_iterator.hpp  table_iterator_fwd.hpp  test.cpp  test.tcl  test_driver.tcl
detail/: sql_statement_impl.cpp  sql_statement_impl.hpp  sqlite_dbconn.cpp  sqlite_dbconn.hpp
include/: database_connection.hpp  database_connection_fwd.hpp  database_transaction.hpp  general_typedefs.hpp  handle.hpp  handle_counter.hpp  handle_fwd.hpp  id.hpp  identity_map.hpp  identity_map_fwd.hpp  info.hpp  next_auto_key.hpp  persistence_traits.hpp  persistent_object.hpp  persistent_object_fwd.hpp  sql_statement.hpp  sql_statement_fwd.hpp  sqloxx_exceptions.hpp  table_iterator.hpp  table_iterator_fwd.hpp
include/detail/: sql_statement_impl.hpp  sqlite_dbconn.hpp
src/: database_connection.cpp  database_transaction.cpp  info.cpp  sql_statement.cpp  sql_statement_impl.cpp  sqlite_dbconn.cpp
tests/: atomicity_test.cpp  atomicity_test.hpp  database_connection_tests.cpp  database_transaction_tests.cpp  derived_po.cpp  derived_po.hpp  example.cpp  example.hpp  handle_tests.cpp  identity_map_tests.cpp  next_auto_key_tests.cpp  persistent_object_tests.cpp  reader_tests.cpp  sql_statement_tests.cpp  sqloxx_tests_common.cpp  sqloxx_tests_common.hpp  table_iterator_tests.cpp  test.cpp
